<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="2dp"
        android:id = "@+id/cardViewd"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/textCountryDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:ellipsize="end"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/Country"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="15dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textCountryDistrict"
                android:layout_marginTop="10dp"
                android:background="#D3D1D1"/>

            <TextView
                android:id="@+id/textConfirmedDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_track_changes_black_24dp"
                android:textColor="#000000"
                android:layout_below="@id/textCountryDistrict"
                android:fontFamily="monospace"
                android:layout_marginTop="25dp"
                android:text="@string/left"
                android:textSize="12dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textDeathDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:drawableStart="@drawable/ic_track_changes_red_24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:textColor="#000000"
                android:fontFamily="monospace"
                android:text="@string/centre"
                android:textSize="12dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textRecoveredDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:drawableStart="@drawable/ic_track_changes_green_24dp"
                android:textColor="#000000"
                android:fontFamily="monospace"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:text="@string/right" />
            <TextView
                android:id="@+id/textSortedDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="monospace"
                android:layout_alignParentEnd="true"
                android:textSize="10dp"
                android:drawableLeft="@drawable/ic_sort_black_24dp"
                android:textStyle="bold"
                />



            <TextView
                android:id="@+id/textConfirmedCountDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:fontFamily="monospace"
                android:paddingStart="15dp"
                android:layout_marginTop="45dp"
                android:textSize="12dp"
                android:text="1000"
                android:textColor="#000000"

                />


            <TextView
                android:id="@+id/textDeathCountDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:fontFamily="monospace"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:textSize="12dp"
                android:textColor="#000000"
                android:text="10" />



            <TextView
                android:id="@+id/textRecoveredCountDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:fontFamily="monospace"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:textSize="12dp"
                android:text="900" />

            <TextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCountryDistrict"
                android:paddingEnd="5dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="65dp"
                android:textSize="9dp"
                android:text="" />
</RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
